--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,9 @@ name: build
 
 on:
   workflow_dispatch:
-  pull_request:
-    branches: ['main']
+  push:
+    tags:
+    - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   build:
