--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,9 +4,13 @@ on:
   workflow_call:
     inputs:
       project-dir:
+        description: Directory of the Go project to build and test
         required: true
         type: string
       allow-test-failure:
+        description: |
+          If set to true, the workflow will continue even if tests fail.
+          This is useful for development purposes but should be false in production builds.
         required: true
         type: boolean
 
@@ -16,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ['1.23.x', '1.24.x']
+        go-version: [1.23.x, 1.24.x]
 
     steps:
     - name: Checkout
